Failed capture scene progress
Progress on failed capture scene, unsure of reason images are not showing properly. Reorganized menu jumps.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -123,6 +123,12 @@
                 "settings": {
                     "foreground": "#000"
                 }
+            },
+            {
+                "scope": "renpy.meta.color.#1c4587",
+                "settings": {
+                    "foreground": "#1c4587"
+                }
             }
         ]
     }
