Who You Are mostly complete
The Who You Are scene is mostly complete, added some other minor notes.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -129,6 +129,18 @@
                 "settings": {
                     "foreground": "#1c4587"
                 }
+            },
+            {
+                "scope": "renpy.meta.color.#ff0000",
+                "settings": {
+                    "foreground": "#ff0000"
+                }
+            },
+            {
+                "scope": "renpy.meta.color.#ffff00",
+                "settings": {
+                    "foreground": "#ffff00"
+                }
             }
         ]
     }
